common ancestor for 2 nodes in a binary tree with DFS

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -26,3 +26,6 @@
 /TwoSum1Solution1.class
 /TwoSum1Solution2.class
 /TwoSum1Solution3.class
+/CommonAncestor.class
+/CommonAncestorSolution.class
+/Node.class
