preorder traversal with inorder and postorder traversal modification

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -29,3 +29,8 @@
 /CommonAncestor.class
 /CommonAncestorSolution.class
 /Node.class
+/PreorderTraversal.class
+/PreorderTraversalSolution.class
+/PreorderTraversalSolution1.class
+/PreorderTraversalSolution2.class
+/PreorderTraversalSolution2$Element.class
