course schedule with graph, fibonacci with recursion and DP, binary search with recursion

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,36 +1,11 @@
-/DifferentElement.class
-/DifferentElementSolution.class
-/MergedSortedArray.class
-/Solution.class
-/Solution1.class
-/Solution2.class
-/TwoSum.class
-/ValidParentheses.class
-/ValidParenthesesSolution.class
-/ValidParenthesesSolution2.class
-/ValidParenthesesSolution3.class
-/BinaryTreeInorderTraversal.class
-/BinaryTreeInorderTraversalSolution.class
-/BinaryTreePreorderTraversal.class
-/BinaryTreePreorderTraversalSolution1.class
-/BinaryTreePreorderTraversalSolution2.class
-/TreeNode.class
-/LongestSubstring.class
-/LongestSubstringSolution.class
-/ReverseInteger.class
-/ReverseIntegerSolution.class
-/RomanToInteger.class
-/RomanToIntegerSolution.class
-/RomanToIntegerSolution$1.class
-/TwoSum1.class
-/TwoSum1Solution1.class
-/TwoSum1Solution2.class
-/TwoSum1Solution3.class
-/CommonAncestor.class
-/CommonAncestorSolution.class
-/Node.class
-/PreorderTraversal.class
-/PreorderTraversalSolution.class
-/PreorderTraversalSolution1.class
-/PreorderTraversalSolution2.class
-/PreorderTraversalSolution2$Element.class
+/CopyUndirectedGraph.class
+/CopyUndirectedGraphSolution.class
+/undirectedNode.class
+/nNode.class
+/CourseSchedule.class
+/CourseScheduleSolution.class
+/Fibonacci.class
+/FibonacciSolution.class
+/FibonacciSolution2.class
+/ClassicalBinarySearch.class
+/ClassicalBinarySearchSolution.class
